[package]
name = "prompting-client"
version = "0.1.0"
edition = "2021"
default-run = "prompting-client-echo"

[features]
dry-run = []

[profile.release]
strip = true
lto = true

[[bin]]
name = "prompting-client-scripted"
path = "src/bin/scripted.rs"

[[bin]]
name = "prompting-client-echo"
path = "src/bin/echo.rs"

[[bin]]
name = "prompting-client-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "prompting-client-set-log-level"
path = "src/bin/set_log_level.rs"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
http-body-util = "0.1.1"
hyper-util = { version = "0.1.4", features = ["http1", "tokio", "client-legacy"] }
hyper = { version = "1.3.1", features = ["client", "http1"] }
prost = "0.13.1"
prost-types = "0.13.1"
regex = "1.10.5"
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }
strum = { version = "0.27.0", features = ["derive"] }
thiserror = "1.0.61"
tokio-stream = "0.1.15"
tokio = { version = "1.43.1", features = ["fs", "io-util", "macros", "net", "process", "signal", "rt-multi-thread"] }
tonic = "0.13.1"
tonic-reflection = "0.13.1"
tower = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-journald = "0.3.0"
cached = { version = "0.54.0", features = ["async"] }
tokio-context = "0.1.3"
futures = "0.3.31"

[dev-dependencies]
serial_test = "3.1.1"
simple_test_case = "1.2.0"
tokio = { version = "1.43.1", features = ["process"] }
uuid = { version = "1.8.0", features = ["v4"] }
protobuf = "3.5.0"
tokio-util = "0.7.11"

[build-dependencies]
tonic-build = { version = "0.13.1", features = ["prost"] }
